[gd_scene load_steps=17 format=3 uid="uid://tsodr7cxi12g"]

[ext_resource type="Script" path="res://Workspace.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://d3noif3g8y380" path="res://Graph.tscn" id="2_kgo0s"]
[ext_resource type="PackedScene" uid="uid://oxj3mnllfedr" path="res://spreadsheet.tscn" id="2_nkah7"]
[ext_resource type="FontFile" path="res://Inspector-labels.tres" id="3"]
[ext_resource type="PackedScene" path="res://InputMenu.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://c2xeh2sqkhkrv" path="res://Fonts/DroidSans-Bold.ttf" id="6_7a7ob"]
[ext_resource type="Theme" uid="uid://de3cpifuxp4xd" path="res://Panel-theme.tres" id="8"]
[ext_resource type="Texture2D" uid="uid://bggml83s5j70e" path="res://Images/Icons/minus-circle.svg" id="8_v5skk"]
[ext_resource type="Script" path="res://Grid2D.gd" id="9_82lmw"]
[ext_resource type="Texture2D" uid="uid://32xlh00n012f" path="res://Images/Icons/minus-circle1.svg" id="9_k1glm"]
[ext_resource type="Texture2D" uid="uid://2cnjelbd7em1" path="res://Images/Icons/plus-circle.svg" id="10_x07by"]
[ext_resource type="Texture2D" uid="uid://kdf6fp8i6gie" path="res://Images/Icons/plus-circle1.svg" id="11_bihk8"]
[ext_resource type="Texture2D" uid="uid://la3jkyyh1wcw" path="res://Images/Icons/rotate-ccw.svg" id="12_2a6h4"]
[ext_resource type="Texture2D" uid="uid://b7xtkl4fualj1" path="res://Images/Icons/rotate-ccw1.svg" id="13_n3qy5"]

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.168627, 0.192157, 0.239216, 1)
border_width_left = 8
border_color = Color(0.0980392, 0.113725, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.337255, 0.364706, 0.427451, 1)

[node name="Workspace" type="Node2D"]
script = ExtResource("2")

[node name="GridReference" type="Node2D" parent="."]
editor_description = "This node is purely here for the uses of the InfiniteGrid. Its position will be used as a reference when creating the InfiniteGrid."
position = Vector2(576, 324)

[node name="Graph" parent="." instance=ExtResource("2_kgo0s")]

[node name="Spreadsheet" parent="Graph" instance=ExtResource("2_nkah7")]

[node name="Panel" type="CanvasLayer" parent="."]

[node name="RightBoxContainer" type="HBoxContainer" parent="Panel"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_force_pass_scroll_events = false
alignment = 2

[node name="RightPanel" type="PanelContainer" parent="Panel/RightBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("8")
theme_override_styles/panel = SubResource("7")

[node name="MarginContainer" type="MarginContainer" parent="Panel/RightBoxContainer/RightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/RightBoxContainer/RightPanel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_7a7ob")
theme_override_font_sizes/normal_font_size = 20
text = "Inspector"
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
theme = ExtResource("8")

[node name="Row" type="VBoxContainer" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Column" type="HBoxContainer" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer/ScrollContainer/Row"]
layout_mode = 2
size_flags_vertical = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer/ScrollContainer/Row/Column"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("3")
theme_override_styles/focus = SubResource("5")
text = "Eyyy"
scroll_active = false
selection_enabled = true

[node name="SpinBox" type="SpinBox" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer/ScrollContainer/Row/Column"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource("8")
update_on_text_changed = true
select_all_on_focus = true

[node name="OptionButton" type="OptionButton" parent="Panel/RightBoxContainer/RightPanel/MarginContainer/VBoxContainer/ScrollContainer/Row"]
layout_mode = 2
theme = ExtResource("8")

[node name="LeftBoxContainer" type="HBoxContainer" parent="Panel"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 140.0
grow_vertical = 2

[node name="LeftPanel" type="PanelContainer" parent="Panel/LeftBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("8")

[node name="MarginContainer" type="MarginContainer" parent="Panel/LeftBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LeftBoxContainer/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/LeftBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/LeftBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 40)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_7a7ob")
theme_override_font_sizes/normal_font_size = 20
text = "Workspace"
scroll_active = false

[node name="ItemTree" type="Tree" parent="Panel/LeftBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("8")

[node name="Control2" type="Control" parent="Panel/LeftBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/LeftBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/LeftBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="Panel/LeftBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/LeftBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/LeftBoxContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(120, 26)
layout_mode = 2
size_flags_vertical = 0

[node name="Minus" type="TextureButton" parent="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("8_v5skk")
texture_pressed = ExtResource("8_v5skk")
texture_hover = ExtResource("9_k1glm")

[node name="Label" type="Label" parent="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "%"

[node name="Plus" type="TextureButton" parent="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("10_x07by")
texture_pressed = ExtResource("10_x07by")
texture_hover = ExtResource("11_bihk8")

[node name="Reset" type="TextureButton" parent="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("12_2a6h4")
texture_pressed = ExtResource("12_2a6h4")
texture_hover = ExtResource("13_n3qy5")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="InputMenu" parent="GUI" instance=ExtResource("4")]
visible = false
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(676, 324)

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Grid2D" type="Node2D" parent="Background"]
script = ExtResource("9_82lmw")

[connection signal="pressed" from="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/Plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Panel/LeftBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]

[editable path="Graph"]
